# marimo_guard

./: .gitignore  README.md  pyproject.toml
docs/: marimo_best_practices_agent.md  marimo_customization_guide.md  marimo_format.md  marimo_guard_config.md  marimo_guard_guide.md  marimo_mcp_code_review.md  marimo_mcp_integration.md  reports.md
marimo_guard/: __init__.py  selftest.py
marimo_guard/adapters/: http_client.py
marimo_guard/adapters/marimo/: __init__.py  client.py
marimo_guard/notebooks/: chart_registry.py  marimo_helpers.py  visual_helpers.py
marimo_guard/safeguard/: __init__.py  config.py  guard.py  loop.py  watch.py
marimo_guard/service_layer/: session_service.py
marimo_guard/utils/: proc.py
tests/: test_marimo_client.py  test_session_service.py
